# corporeum

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
examples/: empty_save.rs  load_save.rs
examples/ud2uf/: Cargo.toml
examples/ud2uf/src/: main.rs
src/: author.rs  compression.rs  corporeum.rs  corpus.rs  document.rs  error.rs  format.rs  lib.rs  metadata.rs  schema.rs  sentence.rs  token.rs  translation.rs
uniform/: Cargo.toml
uniform/src/: document.rs  schema.rs
