[package]
name = "corporum"
version = "0.1.0"
edition = "2021"
authors = ["Fero Forgac <fero4gac@protonmail.com>"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
ciborium = { version = "0.2.1", optional = true }
flate2 = { version = "1.0.26", optional = true }
zstd = { version = "0.13.0", optional = true }
lzma-rs = { version = "0.3.0", optional = true }
serde_json = { version = "1.0.108", optional = true }
serde-xml-rs = { version = "0.6.0", optional = true }
rmp-serde = { version = "1.1.2", optional = true }
bincode = { version = "1.3.3", optional = true }

[features]
default = ["cbor-format", "flate2-compression"]

# For testing
#default = [
#    "flate2-compression",
#    "zstd-compression",
#    "lzma-compression",
#    "cbor-format",
#    "json-format",
#    "xml-format",
#    "rmp-format",
#    "bincode-format",
#]

# Compression formats
flate2-compression = ["dep:flate2"]
zstd-compression = ["dep:zstd"]
lzma-compression = ["dep:lzma-rs"]

# Save formats
cbor-format = ["dep:ciborium"]
json-format = ["dep:serde_json"]
xml-format = ["dep:serde-xml-rs"]
rmp-format = ["dep:rmp-serde"]
bincode-format = ["dep:bincode"]
