[workspace]
members = ["uniform"]
resolver = "2"

[workspace.package]
rust-version = "1.86.0"
version = "0.2.0"
edition = "2024"
authors = ["Fero Forgac <4gac@users.noreply.github.com>"]

[workspace.dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0.26"
thiserror = "2.0.11"
